AdminInitializer 기본값 정리, 게시판,댓글,상품문의,답변,불필요한클래스삭제